Fixed business name clipping inside logo image, changed business name to temp value

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,21 @@ body{
 
 header{
     width: 100%; 
-    margin-top: 76px; 
+    margin-left: 20px;
+    margin-top: 10px;
  }
 
- #top_nav{
-     margin-left: 20px;
+ #business_logo{
+     position: absolute;
+     margin-top: 34px;
+     margin-left: 88px;
+     font-family: Arial, Helvetica, sans-serif;
+     font-style: normal;
+     font-size: 24px;
+     color: black;
+     line-height: 30px;
  }
+
  #logo{
      background-image: url("../images/star.jpg");
      background-repeat: no-repeat;
